# rag-chat

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.gpu.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3c6f0f7f6a5a_make_chat_session_prompt_nullable.py  43b2c5aeaa2f_initial_tables.py  8a2f9b7d4c13_enable_pg_trgm_for_hybrid_retrieval.py  b9f3d1a6c2e4_remove_user_prompt_template_from_prompt_templates.py
backend/app/: config.py  database.py  main.py
backend/app/api/: chat.py  endpoints.py  knowledge.py  models.py  prompts.py
backend/app/core/: __init__.py  embeddings.py  ingestion.py  rag.py  retrieval.py
backend/app/models/: __init__.py  api_endpoint.py  chat.py  chunk.py  document.py  knowledge_base.py  ollama_model.py  prompt_template.py
backend/app/schemas/: __init__.py  api_endpoint.py  chat.py  document.py  knowledge_base.py  model.py  prompt_template.py
backend/app/services/: chat_service.py  endpoint_service.py  knowledge_service.py  model_service.py  prompt_service.py
backend/tests/: test_chat_api.py  test_chat_service.py  test_endpoints_api.py  test_health.py  test_knowledge_api.py  test_knowledge_service.py  test_models.py  test_models_api.py  test_prompt_service.py  test_prompts_api.py  test_rag.py  test_retrieval.py  test_schemas.py
docs/: design-spec.md  implementation-plan.md  unfinished-features-analysis.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/scripts/: ui-smoke.mjs
(+37 files in other folders)
